app-test/testdata/typesystem/neg/pattern-matching-analysis-exhaustivity-action-case/check/patmat.check
testdata/typesystem/neg/pattern-matching-analysis-exhaustivity-action-case/src/patmat.cal:5:9: error: action case may not be exhaustive.

It would fail on actions: X:[_], Y:[U(_, _)], X:[_], Y:[U(_, true)]
        action
        ^^^^^^
            case
^^^^^^^^^^^^^^^^
                X:[A], Y:[U(1, false)] ==>
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
                do
^^^^^^^^^^^^^^^^^^
                end
^^^^^^^^^^^^^^^^^^^
            else
^^^^^^^^^^^^^^^^
                X:[B(A)], Y:[U(2, false)] ==>
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
                do
^^^^^^^^^^^^^^^^^^
                end
^^^^^^^^^^^^^^^^^^^
            end
^^^^^^^^^^^^^^^
        end
^^^^^^^^^^^